# WebhookWise

./: .dockerignore  .env.example  .env.example.all  .env.migration.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_PROMPT.md  CLAUDE.md  CONCURRENT_DUPLICATE_FIX.md  CONTRIBUTING.md  DEBUG_PAGINATION.md  DEDUPLICATION_FIX.md  DUPLICATE_TIME_WINDOW.md  Dockerfile  HOW_TO_VIEW_DETAILS.md  JSON_DISPLAY_IMPROVEMENTS.md  MIGRATION_RESULT.md  PAGINATION_FIX.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_RESULTS.md  README.md  TIME_WINDOW_BEHAVIOR_CONFIG.md  ai_analyzer.py  alembic.ini  alert_noise_reduction.py  app.py  apply_unique_constraint.py  compose.yaml  config.py  coverage.xml  docker-compose.infra.yml  docker-compose.lite.yml  docker-compose.observability.yml  docker-compose.supervisor.yml  docker-compose.yml  ecosystem_adapters.py  entrypoint.sh  fix_async_crud.py  (+25 more)
.github/: dependabot.yml
adapters/: __init__.py  declarative.py  ecosystem_adapters.py  engine_protocol.py  normalized.py  notification_targets.py  registry.py  simple_adapters.py  summary_extractors.py
alembic/: env.py
api/: __init__.py  admin.py  ai_usage.py  analysis.py  app.py  dashboard.py  deep_analysis.py  forward_retry.py  forward_rules.py  forwarding.py  health.py  reanalysis.py  runtime_wiring.py  webhook.py  webhook_context.py
contracts/: __init__.py  deep_analysis_report.py  webhook_payload.py
core/: __init__.py  alert_concurrency.py  app.py  app_context.py  auth.py  circuit_breaker.py  collections_utils.py  compression.py  config.py  config_provider.py  datetime_utils.py  dependencies.py  distributed_lock.py  http_client.py  json.py  log_context.py  logger.py  logging_levels.py  metrics.py  models.py  otel.py  pinned_dns.py  pipeline.py  pollers.py  pubsub_cache.py  redis_client.py  redis_health.py  redis_json.py  redis_keys.py  redis_lifecycle.py  redis_metrics.py  redis_ops.py  redis_pubsub.py  redis_streams.py  request_ip.py  retry_policies.py  runtime_config.py  runtime_heartbeat.py  runtime_mode.py  sensitive_data.py  (+9 more)
crud/: ai_usage.py  analysis.py  forward_rules.py  helpers.py  webhook.py
db/: engine.py  session.py
docs/: ARCHITECTURAL_EVOLUTION.md  CLEANUP_GUIDE.md  README.md  optimization-opportunities.md  refactoring-dedup-system.md  refactoring-overall.md  refactoring-push-system.md  simplification-report.md
grafana/: dashboard-diagnostics.json  dashboard.json
migrations/: add_deep_analyses.py  add_forward_rules.py  add_polling_fields.py  add_processing_status.py  add_skill_config.py  add_skill_config_external_fields.py  create_archive_table.py  fix_duplicate_count.py  init_migrations.py  migrate_db.py  migrations_tool.py
models/: __init__.py  analysis.py  audit_log.py  config.py  decision_trace.py  forwarding.py  incident.py  kb_document.py  operations.py  remediation.py  silence.py  suppressed_record.py  webhook.py
prompts/: chatops_analysis.txt  chatops_intent.txt  deep_analysis.txt  incident_summary.txt  webhook_analysis.txt  webhook_analysis_detailed.txt  webhook_analysis_simple.txt
runbooks/: disk_full.yaml  high_cpu.yaml  pod_crash.yaml
schemas/: __init__.py  admin.py  ai_usage.py  analysis.py  base.py  decision_trace.py  forwarding.py  operations.py  rules.py  sandbox.py  silences.py  webhook.py
scripts/: add_processing_status.py  add_retry_count_and_pending_index.py  apply_unique_constraint.py  archive_data.py  check_importance.py  (+21 more)
(+735 files in other folders)
