[project]
name = "webhookwise"
version = "0.1.0"
description = "Webhook ingestion, analysis, forwarding, and observability service."
requires-python = ">=3.12"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "B", "UP", "SIM", "F", "C4", "PIE", "PERF", "E", "W"]
ignore = ["E501", "UP038"]

[tool.ruff.lint.per-file-ignores]
"api/*.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
markers = [
  "real_httpx: allow a test to use the real httpx client instead of the default mock",
  "real_network: allow a test to use real outbound HTTP libraries",
  "real_redis: allow a test to use a real Redis client instead of the default mock",
  "real_services: allow a test to opt out of default external-service mocks",
]

[tool.coverage.run]
source = ["core", "api", "services", "models", "adapters", "db"]
omit = ["tests/*", "alembic/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
files = ["."]
exclude = [
  "^docs/",
  "^tests/",
  "^scripts/",
  "^templates/",
  "^alembic/",
  "^postgres_data/",
  "^\\.venv/",
  "^\\.tox/",
]

[[tool.mypy.overrides]]
module = [
  "opentelemetry.*",
  "pyroscope.*",
  "asyncpg.*",
  "instructor",
  "uvloop",
  "gunicorn.*",
]
ignore_missing_imports = true
